<resources>
    <string name="app_name">Kamus Indonesia-Korea</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="antonim">Antonim</string>
    <string name="latihan">Latihan</string>
    <string name="hangeul">Hangeul</string>
    <string name="list">Daftar Kata</string>
    <string name="search">Cari</string>
    <string name="option_a">Option A</string>
    <string name="option_b">Option B</string>
    <string name="option_c">Option C</string>
    <string name="option_d">Option D</string>
    <string name="question">Question</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>