<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_hangeul"
        android:icon="@drawable/ic_font_24"
        android:title="@string/hangeul" />

    <item
        android:id="@+id/navigation_list"
        android:icon="@drawable/ic_view_list_24"
        android:title="@string/list" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search_24"
        android:title="@string/search" />

    <item
        android:id="@+id/navigation_antonim"
        android:icon="@drawable/ic_arrows_24"
        android:title="@string/antonim" />

    <item
        android:id="@+id/navigation_latihan"
        android:icon="@drawable/ic_note_24"
        android:title="@string/latihan" />

</menu>