<?xml version="1.0" encoding="utf-8"?>
<!--suppress ALL -->
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_search">

    <fragment
        android:id="@+id/navigation_hangeul"
        android:name="com.example.myapplication.ui.hangeul.HangeulFragment"
        android:label="@string/hangeul"
        tools:layout="@layout/fragment_hangeul" />

    <fragment
        android:id="@+id/navigation_list"
        android:name="com.example.myapplication.ui.list.ListFragment"
        android:label="@string/list"
        tools:layout="@layout/fragment_list" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.myapplication.ui.search.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_antonim"
        android:name="com.example.myapplication.ui.antonim.AntonimFragment"
        android:label="@string/antonim"
        tools:layout="@layout/fragment_antonim" />

    <fragment
        android:id="@+id/navigation_latihan"
        android:name="com.example.myapplication.ui.latihan.LatihanFragment"
        android:label="@string/latihan"
        tools:layout="@layout/fragment_latihan" />
</navigation>