<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="8dp"
    android:background="@drawable/card_item_background"
    android:elevation="6dp"
    android:orientation="vertical"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/nomor_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/question_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/question"
            android:textSize="16sp" />
    </LinearLayout>

        <RadioGroup
            android:id="@+id/options_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:orientation="vertical"
            android:textSize="16sp">

            <RadioButton
                android:id="@+id/option_a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option_a" />

            <RadioButton
                android:id="@+id/option_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option_b" />

            <RadioButton
                android:id="@+id/option_c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option_c" />

            <RadioButton
                android:id="@+id/option_d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option_d" />

        </RadioGroup>

    </LinearLayout>

</androidx.cardview.widget.CardView>
